Create general page structure

--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>Header</header>
+
+    <!-- Main Content -->
+    <main>Main Content</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
+  </body>
 </html>
