--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
   </head>
   <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="">Gallery</a>
+            <a href="index.html">
+                <img src="/assets/images/logo_transparent.png" alt="logo transparent image">
+            </a>
+            <a href="">Contact</a>
+            <a href="">About Us</a>
+        </div>
+    </header>
 
     <!-- Main Content -->
     <main>Main Content</main>
