--- a/index.html
+++ b/index.html
@@ -35,20 +35,35 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
-        <div>
+      <nav>
+        <ul>
+          <li>
             <a href="index.html">Home</a>
+          </li>
+          <li>
             <a href="">Gallery</a>
+          </li>
+          <li>
             <a href="index.html">
-                <img src="/assets/images/logo_transparent.png" alt="logo transparent image">
+              <img
+                src="/assets/images/logo_transparent.png"
+                alt="logo transparent image"
+              />
             </a>
+          </li>
+          <li>
             <a href="">Contact</a>
+          </li>
+          <li>
             <a href="">About Us</a>
-        </div>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Main Content -->
