Create the navbar like buttons with some styles

--- a/index.html
+++ b/index.html
@@ -40,22 +40,23 @@
   <body>
     <!-- Header -->
     <header>
+      <a href="index.html">
+        <img
+          src="/assets/images/logo_transparent.png"
+          alt="logo transparent image"
+          id="logo"
+        />
+      </a>
+
       <nav>
-        <ul>
+        <ul id="menu">
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html" class="active">Home</a>
           </li>
           <li>
             <a href="">Gallery</a>
           </li>
-          <li>
-            <a href="index.html">
-              <img
-                src="/assets/images/logo_transparent.png"
-                alt="logo transparent image"
-              />
-            </a>
-          </li>
+
           <li>
             <a href="">Contact</a>
           </li>
