Style navbar drop down menu and set to hidden

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
       <nav>
         <ul id="menu">
           <li>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active">home</a>
           </li>
           <li>
-            <a href="">Gallery</a>
+            <a href="">gallery</a>
           </li>
 
           <li>
-            <a href="">Contact</a>
+            <a href="">contact</a>
           </li>
           <li>
-            <a href="">About Us</a>
+            <a href="">about us</a>
           </li>
         </ul>
       </nav>
