--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           id="logo"
         />
       </a>
-
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
           <li>
