Changes in the navbar and made it to the list

--- a/index.html
+++ b/index.html
@@ -40,38 +40,44 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="index.html">
+      <a href="index.html" class="primary-logo">
         <img
           src="/assets/images/logo_transparent.png"
           alt="logo transparent image"
           id="logo"
         />
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li>
-            <a href="index.html" class="active">home</a>
+            <a href="index.html" class="nav-list active">Home</a>
           </li>
           <li>
-            <a href="">gallery</a>
-          </li>
-
-          <li>
-            <a href="">contact</a>
+            <a href="" class="nav-list">Gallery</a>
           </li>
           <li>
-            <a href="">about us</a>
+            <a href="" class="nav-list">Contact</a>
+          </li>
+          <li>
+            <a href="" class="nav-list">About us</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <!-- Main Content -->
-    <main>Main Content</main>
+    <main>
+        Main content
+    </main>
 
     <!-- Footer -->
     <footer>Footer</footer>
+
+    <!-- Fontawsome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
   </body>
 </html>
