Create the footer and some social network links to it, working on new logo and toggle list

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
       <a href="index.html" class="primary-logo">
         <img
-          src="/assets/images/logo_transparent.png"
+          src="/assets/images/ho3-mineral-water-logo.png"
           alt="logo transparent image"
           id="logo"
         />
@@ -75,7 +75,14 @@
     </main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul id="social-network">
+            <li><a href="http://twitter.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="http://youtube.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="http://facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="http://instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+    </footer>
 
     <!-- Fontawsome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
