--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       content="mienral water, water, drink, healthy product"
     />
     <!-- Title -->
-    <title>ho3 Mineral Water</title>
+    <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
@@ -52,7 +52,11 @@
         ><i class="fa-solid fa-bars"></i
       ></label> -->
       <nav class="navbar">
-        <div><a href="index.html" class="nav-list"> H&#8322;O Mineral Water </a></div>
+        <div>
+          <a href="index.html" class="nav-list">
+            <img src="/assets/images/New Project.png" alt="primary logo">
+          </a>
+        </div>
         <ul id="menu" class="menu">
           <li class="list-menu">
             <a href="index.html" class="nav-list active">Home</a>
