upload new logo

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         ><i class="fa-solid fa-bars"></i
       ></label> -->
       <nav class="navbar">
-        <div>
+        <div class="logo-container">
           <a href="index.html" class="nav-list">
-            <img src="/assets/images/New Project.png" alt="primary logo">
+            <img src="/assets/images/h2o-logo.png" alt="primary logo">
           </a>
         </div>
         <ul id="menu" class="menu">
