--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="navbar">
         <div class="logo-container">
           <a href="index.html" class="nav-list">
-            <img src="/assets/images/h2o-logo.png" alt="primary logo">
+            <img src="/assets/images/new-h2o.png" alt="primary logo">
           </a>
         </div>
         <ul id="menu" class="menu">
