fixed the toggle-icon functionality, and working on making the navbar responsive

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label> -->
+      <div class="logo-container">
+        <a href="index.html" class="nav-list">
+          <img src="/assets/images/new-logo.png" alt="primary logo" />
+        </a>
+      </div>
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
+      <label for="toggle-icon" class="label-toggle-icon"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav class="navbar">
-        <div class="logo-container">
-          <a href="index.html" class="nav-list">
-            <img src="/assets/images/new-h2o.png" alt="primary logo">
-          </a>
-        </div>
         <ul id="menu" class="menu">
           <li class="list-menu">
             <a href="index.html" class="nav-list active">Home</a>
