--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
       ></label> -->
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="/assets/images/new-logo.png" alt="primary logo" />
+          <img src="/assets/images/white-logo.png" alt="primary logo" />
         </a>
       </div>
       <input type="checkbox" id="toggle-icon" class="toggle-icon" />
       <label for="toggle-icon" class="label-toggle-icon"
-        ><i class="fa-solid fa-bars"></i
+        ><i class="fa-solid fa-bars hamburger"></i
       ></label>
       <nav class="navbar">
         <ul id="menu" class="menu">
-          <li class="list-menu">
-            <a href="index.html" class="nav-list active">Home</a>
+          <li class="list-menu active">
+            <a href="index.html" class="nav-list">Home</a>
           </li>
           <li class="list-menu">
             <a href="" class="nav-list">Gallery</a>
