--- a/index.html
+++ b/index.html
@@ -79,7 +79,25 @@
     </header>
 
     <!-- Main Content -->
-    <main>Main content</main>
+    <main>
+      <div class="hero-container">
+        <section id="hero-image"></section>
+      </div>
+      <section class="text-container">
+        <h1><strong>H&#8322;O</strong> Mieral Water</h1>
+        <hr>
+        <p>
+          some textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome textsome
+          textsome textsome textsome textsome textsome textsome text
+        </p>
+      </section>
+    </main>
 
     <!-- Footer -->
     <footer>
