Create a arrow button to go to the top of the page

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           textsome textsome textsome textsome textsome textsome text
         </p>
       </section>
+      <div class="go-top">
+        <a href="#" class="go-top-button">&uarr;</a>
+      </div>
     </main>
 
     <!-- Footer -->
