Add an image and heading and some text to the description

--- a/index.html
+++ b/index.html
@@ -84,18 +84,21 @@
         <section id="hero-image"></section>
       </div>
       <section class="text-container">
-        <h1><strong>H&#8322;O</strong> Mieral Water</h1>
+        <h1><strong>H<span class="subscript">2</span>O</strong> Mieral Water</h1>
         <hr>
-        <p>
-          some textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome textsome
-          textsome textsome textsome textsome textsome textsome text
-        </p>
+        <div class="description">
+            <img src="/assets/images/alp-image.png" alt="alp image" class="alp-image">
+            <p>
+              some text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text some
+              text some text some text some text some text some text some text.
+            </p>
+        </div>
       </section>
       <div class="go-top">
         <a href="#" class="go-top-button">&uarr;</a>
