Add seperate background color to each section, add some images to each section and responsive them to mobile size

--- a/index.html
+++ b/index.html
@@ -84,20 +84,63 @@
         <section id="hero-image"></section>
       </div>
       <section class="text-container">
-        <h1><strong>H<span class="subscript">2</span>O</strong> Mieral Water</h1>
-        <hr>
+        <h1>
+          <strong>H<span class="subscript">2</span>O</strong> Mieral Water
+        </h1>
+        <hr />
         <div class="description">
-            <img src="/assets/images/alp-image.png" alt="alp image" class="alp-image">
-            <p>
-              some text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text some
-              text some text some text some text some text some text some text.
-            </p>
+          <img
+            src="/assets/images/alp-image.png"
+            alt="alp image"
+            class="alp-image"
+          />
+        </div>
+        <p>
+          &emsp; some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text.
+        </p>
+      </section>
+      <section class="profit-water">
+        <div class="description">
+          <img
+            src="/assets/images/woman-drinking.png"
+            alt="A woman is drinking water from the bottle"
+            class="drinking-woman"
+          />
+        </div>
+        <h3>Profit of drinking water</h3>
+        <hr>
+        <p>
+          &emsp; some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text.
+        </p>
+      </section>
+      <section class="products">
+        <div class="description">
+            <img src="/assets/images/bottle.png" alt="Plastic bottle of H2O" class="plastic-bottle"/>
+        </div>
+        <p>
+          &emsp; some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text some text some text some text some text
+          some text some text some text.
+        </p>
+        <div class="description">
+          <img src="/assets/images/kid-water.png" alt="Glass bottle of H2O" class="glass-bottle"/>
         </div>
       </section>
       <div class="go-top">
