--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
       </div>
       <section class="text-container">
         <h1>
+          <img
+            src="/assets/images/logo-black.png"
+            alt="Logo in black color"
+            class="black-logo"
+          />
           <strong>H<span class="subscript">2</span>O</strong> Mieral Water
         </h1>
         <hr />
@@ -116,7 +121,7 @@
           />
         </div>
         <h3>Profit of drinking water</h3>
-        <hr>
+        <hr />
         <p>
           &emsp; some text some text some text some text some text some text
           some text some text some text some text some text some text some text
@@ -131,7 +136,11 @@
       </section>
       <section class="products">
         <div class="description">
-            <img src="/assets/images/bottle.png" alt="Plastic bottle of H2O" class="plastic-bottle"/>
+          <img
+            src="/assets/images/bottle.png"
+            alt="Plastic bottle of H2O"
+            class="plastic-bottle"
+          />
         </div>
         <p>
           &emsp; some text some text some text some text some text some text
@@ -140,7 +149,11 @@
           some text some text some text.
         </p>
         <div class="description">
-          <img src="/assets/images/kid-water.png" alt="Glass bottle of H2O" class="glass-bottle"/>
+          <img
+            src="/assets/images/kid-water.png"
+            alt="Glass bottle of H2O"
+            class="glass-bottle"
+          />
         </div>
       </section>
       <div class="go-top">
