Made three HTML pages Home, Products, Contact. Fixed the margin-top of the main in larger screen

--- a/index.html
+++ b/index.html
@@ -40,17 +40,6 @@
   <body>
     <!-- Header -->
     <header>
-      <!-- <a href="index.html" class="primary-logo">
-        <img
-          src="/assets/images/ho3-mineral-water-logo.png"
-          alt="logo transparent image"
-          id="logo"
-        />
-      </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-bars"></i
-      ></label> -->
       <div class="logo-container">
         <a href="index.html" class="nav-list">
           <img src="/assets/images/white-logo.png" alt="primary logo" />
@@ -66,13 +55,10 @@
             <a href="index.html" class="nav-list">Home</a>
           </li>
           <li class="list-menu">
-            <a href="" class="nav-list">Gallery</a>
+            <a href="products.html" class="nav-list">Products</a>
           </li>
           <li class="list-menu">
-            <a href="" class="nav-list">Contact</a>
-          </li>
-          <li class="list-menu">
-            <a href="" class="nav-list">About us</a>
+            <a href="contact.html" class="nav-list">Contact</a>
           </li>
         </ul>
       </nav>
@@ -157,7 +143,7 @@
         </div>
       </section>
       <div class="go-top">
-        <a href="#" class="go-top-button">&uarr;</a>
+        <a href="#" class="go-top-button"><i class="fa-solid fa-angle-up top-icon"></i></a>
       </div>
     </main>
 
