Add seperate hero image in each HTML page

--- a/products.html
+++ b/products.html
@@ -66,9 +66,9 @@
     </header>
     <!-- Main content -->
     <main>
-        <div class="hero-container">
-            <section id="hero-image"></section>
-        </div>
+      <div class="hero-container">
+        <section id="hero-image-products"></section>
+      </div>
     </main>
 
     <!-- Footer -->
