Added three section and pictures to the products HTML

--- a/products.html
+++ b/products.html
@@ -69,6 +69,40 @@
       <div class="hero-container">
         <section id="hero-image-products"></section>
       </div>
+      <section class="products-container">
+        <h1 class="products-header">Products</h1>
+        <hr />
+        <div class="products-image-container">
+          <img
+            src="/assets/images/plastic-bottles.png"
+            alt="This is a photo of plastic bottles of H2O Mineral Water"
+            class="products-plastic-bottles-image"
+          />
+          <img
+            src="/assets/images/glass.png"
+            alt="Photo of a glass bottle of H2O Mineral Water"
+            class="products-glass-image"
+          />
+          <p class="products-description">
+            some text some text some text some text some text some text some
+            text some text some text some text some text some text some text
+            some text some text some text some text some text some text some
+            text some text some text some text some text some text some text
+            some text some text some text some text
+          </p>
+        </div>
+      </section>
+      <section class="quality-steps">
+        <h1 class="quality-steps-header">Quality Steps</h1>
+        <hr />
+        <img
+          src="/assets/images/quality-steps.png"
+          alt="This is steps of qualitize of mineral water"
+          class="quality-steps-image"
+        />
+        <p class="quality-steps-description"></p>
+      </section>
+      <section class="analyze"></section>
     </main>
 
     <!-- Footer -->
