--- a/products.html
+++ b/products.html
@@ -84,11 +84,14 @@
             class="products-glass-image"
           />
           <p class="products-description">
-            some text some text some text some text some text some text some
-            text some text some text some text some text some text some text
-            some text some text some text some text some text some text some
-            text some text some text some text some text some text some text
-            some text some text some text some text
+            &emsp;Unlike other mineral water providers, our primary focus is
+            solely on packaging 0.5-liter bottles in separate forms. Alongside
+            the specific models produced by the company (glass bottles and
+            plastic bottles), which you can see in the pictures, we can also
+            custom design and produce bottle models according to your
+            preferences. This is possible when the minimum production quantity
+            includes one week of production for your esteemed customer's order.
+            You can go ahead and place your orders through our contact details.
           </p>
         </div>
       </section>
@@ -100,9 +103,86 @@
           alt="This is steps of qualitize of mineral water"
           class="quality-steps-image"
         />
-        <p class="quality-steps-description"></p>
+        <p class="quality-steps-description">
+          &emsp;Not just any water makes it into our bottles. Each and every
+          drop of water has to exceed all sorts of federal, state, industry and
+          company standards. In fact, our water tastes so crisp and refreshing
+          because we go through multiple processing steps that are monitored
+          closely at our manufacturing facility for each bottled water to ensure
+          every container meets or exceeds our quality standards. Specifically,
+          federal, state and industry bottled water quality standards establish
+          limits for microbiological, physical, chemical and radiological
+          substances for bottled water products. Adherence to state, federal and
+          industry bottled water quality standards ensures that every bottle we
+          deliver to your home or office, will be safe to drink, and have a
+          consistently great taste. The result is bottled water that has a crisp
+          and refreshing taste every time you fill your glass.
+        </p>
       </section>
-      <section class="analyze"></section>
+      <section class="analyze">
+        <h1 class="analyze-header">Analyze</h1>
+        <hr />
+        <h4>Our Secret Formula:</h4>
+        <p>
+          &emsp;Once the water is purified, we inject a specially formulated
+          blend of minerals (calcium chloride, magnesium chloride, potassium
+          bicarbonate and sodium chloride) that provides Culligan’s ultra-clean
+          and smooth taste.
+        </p>
+        <h4>Mineral Content (mg/l):</h4>
+        <table>
+          <tr>
+            <td>Calcium</td>
+            <td>20-40</td>
+          </tr>
+          <tr>
+            <td>Magnesium</td>
+            <td>2-5</td>
+          </tr>
+          <tr>
+            <td>Sodium</td>
+            <td>5-15</td>
+          </tr>
+          <tr>
+            <td>Potassium</td>
+            <td>&lt;10</td>
+          </tr>
+          <tr>
+            <td>Chloride</td>
+            <td>60-100</td>
+          </tr>
+          <tr>
+            <td>Sulphate</td>
+            <td>&lt;10</td>
+          </tr>
+          <tr>
+            <td>Nitrate</td>
+            <td>&lt;0.1</td>
+          </tr>
+          <tr>
+            <td>pH</td>
+            <td>6.5-8.5</td>
+          </tr>
+          <tr>
+            <td>Total Minerals</td>
+            <td>130-150</td>
+          </tr>
+        </table>
+        <h4>
+          Each 250 ml glass of Culligan Water contains the following percent
+          daily values based on a 2,000 calorie diet:
+        </h4>
+        <p>Calories……………..<strong>0%</strong></p>
+        <p>Total Fat…………….<strong>0g / 0%</strong></p>
+        <p>Total Carbs………..<strong>0g / 0%</strong></p>
+        <h4>Water Quality Data</h4>
+        <p>
+          &emsp;See copy of our water quality analyses as conducted by certified
+          labs. The analysis includes bottled drinking water quality test
+          results for substances including inorganic, organics, and radiological
+          as well as physical parameters.
+        </p>
+      </section>
     </main>
 
     <!-- Footer -->
