--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,23 @@
         <div class="hero-container">
             <section id="hero-image-contact"></section>
         </div>
+        <section class="form-section">
+            <h1>Contact Us</h1>
+            <hr>
+            <form action="">
+                <input type="text">
+                <label for="">Name</label>
+                <input type="text">
+                <label for="">Email Address</label>
+                <input type="text">
+                <label for="">Phone</label>
+                <input type="text">
+                <label for="">Subject</label>
+                <input type="text">
+                <label for="">Message</label>
+            </form>
+        </section>
+        <section class="contact-section"></section>
     </main>
 
     <!-- Footer -->
