--- a/contact.html
+++ b/contact.html
@@ -44,24 +44,25 @@
         </nav>
     </header>
     <!-- Main content -->
-    <main>
+    <main class="contact-main">
         <div class="hero-container">
             <section id="hero-image-contact"></section>
         </div>
         <section class="form-section">
-            <h1>Contact Us</h1>
-            <hr>
-            <form action="">
-                <input type="text">
-                <label for="">Name</label>
-                <input type="text">
-                <label for="">Email Address</label>
-                <input type="text">
-                <label for="">Phone</label>
-                <input type="text">
+            <form action="https://formdump.codeinstitute.net" method="POST" class="message-form">
+                <h1>Contact Us</h1>
+                <hr>
+                <label for="">Name *</label>
+                <input type="text" class="text-input" required>
+                <label for="">Email Address *</label>
+                <input type="email" class="text-input" required>
+                <label for="">Phone *</label>
+                <input type="number" class="phone-input" required>
                 <label for="">Subject</label>
-                <input type="text">
-                <label for="">Message</label>
+                <input type="text" class="subject-input">
+                <label for="">Message *</label>
+                <textarea name="" id="" class="message-input" required></textarea>
+                <input type="submit" value="Submit Message" class="submit-button">
             </form>
         </section>
         <section class="contact-section"></section>
