made contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -1,97 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
-    <meta name="description" content="ho3 Mineral Water. Product that helps you to be healthy..." />
-    <meta name="keywords" content="mienral water, water, drink, healthy product" />
+    <meta
+      name="description"
+      content="ho3 Mineral Water. Product that helps you to be healthy..."
+    />
+    <meta
+      name="keywords"
+      content="mienral water, water, drink, healthy product"
+    />
     <!-- Title -->
     <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/assets/css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header>
-        <div class="logo-container">
-            <a href="index.html" class="nav-list">
-                <img src="/assets/images/white-logo.png" alt="primary logo" />
-            </a>
-        </div>
-        <input type="checkbox" id="toggle-icon" class="toggle-icon" />
-        <label for="toggle-icon" class="label-toggle-icon"><i class="fa-solid fa-bars hamburger"></i></label>
-        <nav class="navbar">
-            <ul id="menu" class="menu">
-                <li class="list-menu">
-                    <a href="index.html" class="nav-list">Home</a>
-                </li>
-                <li class="list-menu">
-                    <a href="products.html" class="nav-list">Products</a>
-                </li>
-                <li class="list-menu active">
-                    <a href="contact.html" class="nav-list">Contact</a>
-                </li>
-            </ul>
-        </nav>
+      <div class="logo-container">
+        <a href="index.html" class="nav-list">
+          <img src="/assets/images/white-logo.png" alt="primary logo" />
+        </a>
+      </div>
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
+      <label for="toggle-icon" class="label-toggle-icon"
+        ><i class="fa-solid fa-bars hamburger"></i
+      ></label>
+      <nav class="navbar">
+        <ul id="menu" class="menu">
+          <li class="list-menu">
+            <a href="index.html" class="nav-list">Home</a>
+          </li>
+          <li class="list-menu">
+            <a href="products.html" class="nav-list">Products</a>
+          </li>
+          <li class="list-menu active">
+            <a href="contact.html" class="nav-list">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <!-- Main content -->
     <main class="contact-main">
-        <div class="hero-container">
-            <section id="hero-image-contact"></section>
-        </div>
+      <div class="hero-container">
+        <section id="hero-image-contact"></section>
+      </div>
+      <div class="section-container">
         <section class="form-section">
-            <form action="https://formdump.codeinstitute.net" method="POST" class="message-form">
-                <h1>Contact Us</h1>
-                <hr>
-                <label for="">Name *</label>
-                <input type="text" class="text-input" required>
-                <label for="">Email Address *</label>
-                <input type="email" class="text-input" required>
-                <label for="">Phone *</label>
-                <input type="number" class="phone-input" required>
-                <label for="">Subject</label>
-                <input type="text" class="subject-input">
-                <label for="">Message *</label>
-                <textarea name="" id="" class="message-input" required></textarea>
-                <input type="submit" value="Submit Message" class="submit-button">
-            </form>
+          <form
+            action="https://formdump.codeinstitute.net"
+            method="POST"
+            class="message-form"
+          >
+            <h1>Contact Us</h1>
+            <hr />
+            <label for="">Name *</label>
+            <input type="text" class="text-input" required />
+            <label for="">Email Address *</label>
+            <input type="email" class="text-input" required />
+            <label for="">Phone *</label>
+            <input type="number" class="phone-input" required />
+            <label for="">Subject</label>
+            <input type="text" class="subject-input" />
+            <label for="">Message *</label>
+            <textarea name="" id="" class="message-input" required></textarea>
+            <input type="submit" value="Submit Message" class="submit-button" />
+          </form>
         </section>
-        <section class="contact-section"></section>
+        <section class="contact-section">
+          <h2>H&#8322;O Mineral Water Company</h2>
+          <hr />
+          <p><strong>Schwarzau im Gebirge, Austria</strong></p>
+          <p><strong>Phone:</strong> +43 1234567</p>
+          <p><strong>Fax:</strong> +43 12345678</p>
+          <p><strong>Email: </strong> contact@h2o.com</p>
+          <p><strong>Sales agency email: </strong>sales@h2o.com</p>
+        </section>
+      </div>
     </main>
 
     <!-- Footer -->
     <footer>
-        <ul id="social-network">
-            <li>
-                <a href="http://twitter.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="http://youtube.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li>
-                <a href="http://facebook.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="http://instagram.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-instagram"></i></a>
-            </li>
-        </ul>
+      <ul id="social-network">
+        <li>
+          <a
+            href="http://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://youtube.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
 
     <!-- Fontawsome kit -->
-    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/3b20d96fa9.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
