made the label attributes and input attributes of contact page sync, made the hero image in contact page responsive for ultra wide screens

--- a/products.html
+++ b/products.html
@@ -183,6 +183,9 @@
           as well as physical parameters.
         </p>
       </section>
+    <div class="go-top">
+        <a href="#" class="go-top-button"><i class="fa-solid fa-angle-up top-icon"></i></a>
+    </div>
     </main>
 
     <!-- Footer -->
