--- a/contact.html
+++ b/contact.html
@@ -78,16 +78,16 @@
           >
             <h1>Contact Us</h1>
             <hr />
-            <label for="">Name *</label>
-            <input type="text" class="text-input" required />
-            <label for="">Email Address *</label>
-            <input type="email" class="text-input" required />
-            <label for="">Phone *</label>
-            <input type="number" class="phone-input" required />
-            <label for="">Subject</label>
-            <input type="text" class="subject-input" />
-            <label for="">Message *</label>
-            <textarea name="" id="" class="message-input" required></textarea>
+            <label for="fname">Name *</label>
+            <input type="text" class="text-input" name="fname" id="fname" required />
+            <label for="email-address">Email Address *</label>
+            <input type="email" class="text-input" name="email-address" id="email-address" required />
+            <label for="phone-number">Phone *</label>
+            <input type="number" class="phone-input" name="phone-number" id="phone-number" required />
+            <label for="subject">Subject</label>
+            <input type="text" class="subject-input" name="subject" id="subject" />
+            <label for="message-input">Message *</label>
+            <textarea class="message-input" name="message-input" id="message-input" required></textarea>
             <input type="submit" value="Submit Message" class="submit-button" />
           </form>
         </section>
@@ -101,6 +101,9 @@
           <p><strong>Sales agency email: </strong>sales@h2o.com</p>
         </section>
       </div>
+    <div class="go-top">
+        <a href="#" class="go-top-button"><i class="fa-solid fa-angle-up top-icon"></i></a>
+    </div>
     </main>
 
     <!-- Footer -->
