--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="ho3 Mineral Water. Product that helps you to be healthy..."
+      content="h2o Mineral Water. Product that helps you to be healthy..."
     />
     <meta
       name="keywords"
@@ -85,24 +85,25 @@
             alt="alp image"
             class="alp-image"
           />
+          <p class="description-p">
+            &emsp; Certainly! In the Austrian Alps, particularly in the region
+            of Bad Gastein, you can find exceptional mineral water springs that
+            are renowned for their unique properties. Bad Gastein is situated in
+            the heart of the Austrian Alps and is famous for its thermal waters,
+            which have been cherished for their potential health benefits for
+            centuries. One notable mineral spring in this area is the Gasteiner
+            Heilstollen, where visitors can experience radon therapy in the
+            underground galleries of an old mining facility. The naturally
+            occurring radon in the thermal water is believed to have therapeutic
+            effects, especially for individuals suffering from various ailments,
+            including arthritis and respiratory conditions. The combination of
+            the pristine mountain environment and the unique mineral content in
+            these Austrian mineral waters has made Bad Gastein a popular
+            destination for wellness seekers, offering a blend of natural beauty
+            and potential health benefits that are truly distinctive to the
+            region.
+          </p>
         </div>
-        <p>
-          &emsp; Certainly! In the Austrian Alps, particularly in the region of
-          Bad Gastein, you can find exceptional mineral water springs that are
-          renowned for their unique properties. Bad Gastein is situated in the
-          heart of the Austrian Alps and is famous for its thermal waters, which
-          have been cherished for their potential health benefits for centuries.
-          One notable mineral spring in this area is the Gasteiner Heilstollen,
-          where visitors can experience radon therapy in the underground
-          galleries of an old mining facility. The naturally occurring radon in
-          the thermal water is believed to have therapeutic effects, especially
-          for individuals suffering from various ailments, including arthritis
-          and respiratory conditions. The combination of the pristine mountain
-          environment and the unique mineral content in these Austrian mineral
-          waters has made Bad Gastein a popular destination for wellness
-          seekers, offering a blend of natural beauty and potential health
-          benefits that are truly distinctive to the region.
-        </p>
       </section>
       <section class="profit-water">
         <h3>Profit of drinking water</h3>
@@ -113,20 +114,20 @@
             alt="A woman is drinking water from the bottle"
             class="drinking-woman"
           />
+          <p class="profit-p">
+            &emsp; Drinking mineral water is highly profitable for the human
+            body. It naturally contains essential minerals like calcium,
+            magnesium, and potassium, crucial for bone health, muscle function,
+            and overall well-being. Mineral water's purity and absence of
+            contaminants make it a safe and clean hydration choice, aiding in
+            maintaining electrolyte balance and preventing dehydration. Its
+            refreshing taste often encourages increased water consumption,
+            benefiting skin health, digestion, and overall vitality. In summary,
+            mineral water offers a convenient and healthful way to nourish the
+            body with essential minerals and promote optimal hydration,
+            contributing significantly to improved overall health.
+          </p>
         </div>
-        <p>
-          &emsp; Drinking mineral water is highly profitable for the human body.
-          It naturally contains essential minerals like calcium, magnesium, and
-          potassium, crucial for bone health, muscle function, and overall
-          well-being. Mineral water's purity and absence of contaminants make it
-          a safe and clean hydration choice, aiding in maintaining electrolyte
-          balance and preventing dehydration. Its refreshing taste often
-          encourages increased water consumption, benefiting skin health,
-          digestion, and overall vitality. In summary, mineral water offers a
-          convenient and healthful way to nourish the body with essential
-          minerals and promote optimal hydration, contributing significantly to
-          improved overall health.
-        </p>
       </section>
       <section class="products">
         <h3>Why you should try H&#8322;O</h3>
@@ -137,8 +138,8 @@
             alt="Plastic bottle of H2O"
             class="plastic-bottle"
           />
-        </div>
-        <p>
+        
+        <p class="home-third-section">
           &emsp; Our dedication to product quality is uncompromising, and we
           take multiple meticulous steps to guarantee the excellence of our
           bottled water. Each drop of water we use undergoes rigorous testing
@@ -161,7 +162,7 @@
           water that always delivers a crisp and refreshing experience with
           every sip.
         </p>
-        <div class="description">
+        
           <img
             src="/assets/images/kid-water.png"
             alt="Glass bottle of H2O"
