--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
     <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="ho3 Mineral Water. Product that helps you to be healthy..."
+      content="h2o Mineral Water. Product that helps you to be healthy..."
     />
     <meta
       name="keywords"
