--- a/products.html
+++ b/products.html
@@ -19,23 +19,23 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/favicon/apple-touch-icon.png"
+      href="assets/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon/favicon-32x32.png"
+      href="assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="assets/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
@@ -43,7 +43,7 @@
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="/assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" />
         </a>
       </div>
       <input type="checkbox" id="toggle-icon" class="toggle-icon" />
@@ -74,12 +74,12 @@
         <hr />
         <div class="products-image-container">
           <img
-            src="/assets/images/plastic-bottles.png"
+            src="assets/images/plastic-bottles.png"
             alt="This is a photo of plastic bottles of H2O Mineral Water"
             class="products-plastic-bottles-image"
           />
           <img
-            src="/assets/images/glass.png"
+            src="assets/images/glass.png"
             alt="Photo of a glass bottle of H2O Mineral Water"
             class="products-glass-image"
           />
@@ -99,7 +99,7 @@
         <h1 class="quality-steps-header">Quality Steps</h1>
         <hr />
         <img
-          src="/assets/images/quality-steps.png"
+          src="assets/images/quality-steps.png"
           alt="This is steps of qualitize of mineral water"
           class="quality-steps-image"
         />
