--- a/contact.html
+++ b/contact.html
@@ -19,23 +19,23 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/favicon/apple-touch-icon.png"
+      href="assets/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon/favicon-32x32.png"
+      href="assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="assets/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
@@ -43,7 +43,7 @@
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="/assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" />
         </a>
       </div>
       <input type="checkbox" id="toggle-icon" class="toggle-icon" />
