--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/favicon/apple-touch-icon.png"
+      href="assets/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon/favicon-32x32.png"
+      href="assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="assets/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="/assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" />
         </a>
       </div>
       <input type="checkbox" id="toggle-icon" class="toggle-icon" />
@@ -72,7 +72,7 @@
       <section class="text-container">
         <h1>
           <img
-            src="/assets/images/logo-black.png"
+            src="assets/images/logo-black.png"
             alt="Logo in black color"
             class="black-logo"
           />
@@ -81,7 +81,7 @@
         <hr />
         <div class="description">
           <img
-            src="/assets/images/alp-image.png"
+            src="assets/images/alp-image.png"
             alt="alp image"
             class="alp-image"
           />
@@ -110,7 +110,7 @@
         <hr />
         <div class="description">
           <img
-            src="/assets/images/woman-drinking.png"
+            src="assets/images/woman-drinking.png"
             alt="A woman is drinking water from the bottle"
             class="drinking-woman"
           />
@@ -134,7 +134,7 @@
         <hr />
         <div class="description">
           <img
-            src="/assets/images/bottle.png"
+            src="assets/images/bottle.png"
             alt="Plastic bottle of H2O"
             class="plastic-bottle"
           />
@@ -164,7 +164,7 @@
         </p>
         
           <img
-            src="/assets/images/kid-water.png"
+            src="assets/images/kid-water.png"
             alt="Glass bottle of H2O"
             class="glass-bottle"
           />
